<resources>
    <string name="app_name">Favorite Food</string>
    <string name="american">American</string>
    <string name="chinese">Chinese</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="middle_east">Middle East</string>
    <string name="portuguese">Portuguese</string>
    <string name="action_settings">Settings</string>

    <string name="toast_american">You liked American  </string>
    <string name="toast_chinese">You liked Chinese  </string>
    <string name="toast_indian">You liked Indian  </string>
    <string name="toast_italian">You liked Italian  </string>
    <string name="toast_middle_eastern">You liked Middle Eastern  </string>
    <string name="toast_portuguese">You liked Portuguese  </string>

    <string name="toast_end">  times!</string>
</resources>
