<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="159dp"
                android:layout_height="127dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/american_selector" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"

                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/chinese_selector" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="349dp"
            android:layout_height="25dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="39dp"
                android:text="@string/american"
                android:textSize="20sp"
                android:padding="0dp"
                android:layout_gravity="left"
                android:gravity="center"
                android:layout_marginRight="40sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="67dp"
                android:text="@string/chinese"
                android:textSize="20sp"
                android:layout_weight="0.35"
                android:gravity="center"
                android:layout_marginRight="0sp"
                android:layout_marginLeft="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="159dp"
                android:layout_height="127dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/indian_selector" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/italian_selector" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="39dp"
                android:text="@string/indian"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="67dp"
                android:text="@string/italian"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="159dp"
                android:layout_height="127dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/middle_eastern_selector" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="166dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/portuguese_selector" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="39dp"
                android:text="@string/middle_east"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="67dp"
                android:text="@string/portuguese"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>